Fixed Overlap Bug

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -7,6 +7,7 @@
 .header {
 	position: fixed;
 	width: 100%;
+	z-index: 5;
 	top: 0;
 	background-color: var(--background);
 }
